2014-05-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (do_input): Remove the three unused parameters 's_or_t',
	'ran_func', and 'finished'.  They are only ever set and never used.
	* src/text.c (do_justify): Adjust a call of do_input().
	* src/browser (do_browser): Actually translate the go-to-dir prompt.

2014-05-27  Chris Allegretta <chrisa@asty.org>
	* src/winio.c (edit_refresh): wredrawln() is not supported under
	  slang.

2014-05-27  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init): Improve the arrangement of help items
	under certain compilation conditions.
	* src/global.c (strtosc): Make tiny nano a bit tinier.
	* src/global.c (strtosc): Allow rebinding 'suspend' in tiny nano.
	* src/winio.c (set_modified): Adjust translator comment to make it
	show up in the POT file, and make it take the "[  ]" into account.

2014-05-26  Benno Schulenberg  <bensberg@justemail.net>
	* src/cut.c (cut_line): Fix compilation with --enable-tiny.
	* src/text.c (do_linter): Avoid a warning with --enable-tiny.
	* src/global.c (shortcut_init): Unwrap some lines, and reorder two.

2014-05-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c: Cut down on the size of tiny nano, by not compiling
	the function strtosc() when --disable-nanorc is given or implied.

2014-05-25  Mark Majeres  <mark@engine12.com>
	* src/chars.c (addstrings): New function, concatenates two allocated
	strings, tacking the second onto the first and freeing the second.
	* src/cut.c (do_uncut_text): Update the undo structure for a paste.
	* src/text.c (undo_cut, redo_cut, add_undo, update_undo): Place the
	cursor after an undo there where it was before the do, and handle
	multibyte characters correctly.

2014-05-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (edit_draw): Finally, the proper fix for bug #31743;
	telling ncurses to really redraw the line, without optimization, so